--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/frappe-datatable@1.13.5/dist/frappe-datatable.min.js" integrity="sha256-UhO8EewbbiMef6HT+4xe1snDjSba9M/wfQGKaoRT6GY=" crossorigin="anonymous"></script>
     
   </head>
