--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
         借券
       </h1>
         <div class="tile is-12">
+          <div id="SL"></div>
         </div>         
   </section>
 
   <script>
-    var dataTable = new DataTable("#myTable", {
+    var dataTable = new DataTable("#SL", {
       searchable: false,
       fixedHeight: true,
     });
